--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,9 @@
 *.swp
 .DS_Store
 .atom/
-.build/
 .buildlog/
 .history
 .svn/
-.swiftpm/
 migrate_working_dir/
 
 # IntelliJ related
@@ -18,10 +16,8 @@ migrate_working_dir/
 *.iws
 .idea/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
+# Visual Studio Code related
+.vscode/
 
 # Flutter/Dart/Pub related
 **/doc/api/
@@ -29,9 +25,11 @@ migrate_working_dir/
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
+.packages
 .pub-cache/
 .pub/
 /build/
+build/
 
 # Symbolication related
 app.*.symbols
@@ -44,5 +42,24 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-android/local.properties
-lib/firebase_options.dart
+# Firebase credentials - don't check these in!
+firebase_options.dart
+google-services.json
+GoogleService-Info.plist
+
+# Environment files that might contain secrets
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Local configuration
+lib/config/local_config.dart
+
+# Generated files
+*.g.dart
+*.freezed.dart
+
+# Coverage reports
+coverage/
