--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -11,6 +11,7 @@ analyzer:
   errors:
     use_build_context_synchronously: ignore
     unused_import: ignore
+    unnecessary_import: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
