--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,14 +40,14 @@ flutter:
   uses-material-design: true
   
   # Assets like images, fonts, etc.
-  assets:
-    - assets/images/
+  #assets:
+  #  - assets/images/
     
-  fonts:
-    - family: Roboto
-      fonts:
-        - asset: assets/fonts/Roboto-Regular.ttf
-        - asset: assets/fonts/Roboto-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/Roboto-Light.ttf
-          weight: 300
+  #fonts:
+  #  - family: Roboto
+  #    fonts:
+  #      - asset: assets/fonts/Roboto-Regular.ttf
+  #      - asset: assets/fonts/Roboto-Bold.ttf
+  #        weight: 700
+  #      - asset: assets/fonts/Roboto-Light.ttf
+  #        weight: 300
