--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: asset_flow
+name: myapp
 description: An application to help clients track and manage their real estate investments.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
@@ -13,15 +13,16 @@ dependencies:
     sdk: flutter
   
   # Firebase
-  firebase_core: ^2.25.4
-  firebase_auth: ^4.17.4
-  cloud_firestore: ^4.11.0
+  firebase_core: ^3.12.1
+  firebase_auth: ^5.5.1
+  cloud_firestore: ^5.6.5
+  firebase_data_connect: ^0.1.3+2
   
   #Authentication
   #google_sign_in: ^6.1.4
 
   # Utilities
-  intl: ^0.18.1
+  intl: ^0.19.0
   logging: ^1.2.0
   provider: ^6.0.5
   shared_preferences: ^2.2.0
@@ -29,12 +30,15 @@ dependencies:
   # UI
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
-  fl_chart: ^0.63.0
+  fl_chart: ^0.70.2
+
+default_connector:
+  path: ./dataconnect-generated/dart/default_connector/
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
   mockito: ^5.4.0
   build_runner: ^2.4.6
 
