--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
 
   # Utilities
   intl: ^0.19.0
+  uuid: ^3.0.7
   logging: ^1.2.0
   provider: ^6.0.5
   shared_preferences: ^2.2.0
