--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   firebase_auth: ^5.5.1
   cloud_firestore: ^5.6.5
   firebase_data_connect: ^0.1.3+2
+  table_calendar: ^3.0.9   # Add this for calendar functionality
+  fl_chart: ^0.63.0        # Add this for charts
+  http: ^1.1.0             # Add this for API calls
   
   #Authentication
   #google_sign_in: ^6.1.4
@@ -27,11 +30,11 @@ dependencies:
   logging: ^1.2.0
   provider: ^6.0.5
   shared_preferences: ^2.2.0
+  flutter_calendar_carousel: ^2.4.2
   
   # UI
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
-  fl_chart: ^0.70.2
 
 default_connector:
   path: ./dataconnect-generated/dart/default_connector/
